feat(signup-form): show all validation errors and improve error feedback styling

--- a/ecommerce website/login-register.html
+++ b/ecommerce website/login-register.html
@@ -106,15 +106,18 @@
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
           </div>
           <span>or use your email for registration</span>
-<input type="text" id="signup-name" placeholder="Name" class="form__input" />
-<small class="error-message"></small>
-
-<input type="email" id="signup-email" placeholder="Email" class="form__input" />
-<small class="error-message"></small>
-
-<input type="password" id="signup-password" placeholder="Password" class="form__input" />
-<small class="error-message"></small>
-
+          <div class="input-wrapper">
+            <input type="text" id="signup-name" placeholder="Name" class="form__input" />
+            <small class="error-message"></small>
+          </div>
+          <div class="input-wrapper">
+            <input type="email" id="signup-email" placeholder="Email" class="form__input" />
+            <small class="error-message"></small>  
+          </div>
+          <div class="input-wrapper">
+            <input type="password" id="signup-password" placeholder="Password" class="form__input" />
+            <small class="error-message"></small>
+          </div>
           <button>Sign Up</button>
         </form>
 
