--- a/ecommerce website/contact.html
+++ b/ecommerce website/contact.html
@@ -165,7 +165,7 @@
                                 Email: contact@example.com
                             </p>
                         </div>
-
+                <!-- Repeat for other people -->
                         <div>
                             <img src="assets/img/avatar-2.jpg" alt="">
                             <p>
