--- a/ecommerce website/index.html
+++ b/ecommerce website/index.html
@@ -111,7 +111,6 @@
         <img src="assets/img/home-img.png" alt="" class="home__img">
       </div>
     </section>
-
     <!--=============== CATEGORIES ===============-->
     <section class="categories container section">
       <h3 class="section__title"><span>Popular</span> Categories</h3>
@@ -121,6 +120,7 @@
             <img src="assets/img/category-1.jpg" alt="" class="category__img">
             <h3 class="category_title">T-Shirt</h3>
           </a>
+          <!-- Repeat for other categories -->
           <a href="shop.html" class="category__item swiper-slide">
             <img src="assets/img/category-2.jpg" alt="" class="category__img">
             <h3 class="category_title">Bags</h3>
@@ -129,7 +129,6 @@
             <img src="assets/img/category-3.jpg" alt="" class="category__img">
             <h3 class="category_title">Sandal</h3>
           </a>
-
           <a href="shop.html" class="category__item swiper-slide">
             <img src="assets/img/category-4.jpg" alt="" class="category__img">
             <h3 class="category_title">Scarf Cap</h3>
@@ -150,8 +149,6 @@
             <img src="assets/img/category-8.jpg" alt="" class="category__img">
             <h3 class="category_title">Hats</h3>
           </a>
-
-
         </div>
         <div class="swiper-button-next"><i class="fi fi-bs-angle-right"></i></div>
         <div class="swiper-button-prev"><i class="fi fi-bs-angle-left"></i></div>
